@@ -1,3 +1,5 @@
+# TODO: sitebedrock _may_ contain more than 1 row / site... this will result in duplicate rows returned by this function
+
 get_site_data_from_NASIS_db <- function() {
 	q <- "SELECT dbo.site.siteiid as siteiid, dbo.pedon.peiid, dbo.site.usiteid as site_id, dbo.pedon.upedonid as pedon_id, dbo.siteobs.obsdate as obs_date, -(longdegrees + CASE WHEN longminutes IS NULL THEN 0.0 ELSE longminutes / 60.0 END + CASE WHEN longseconds IS NULL THEN 0.0 ELSE longseconds / 60.0 / 60.0 END) as x, latdegrees + CASE WHEN latminutes IS NULL THEN 0.0 ELSE latminutes / 60.0 END + CASE WHEN latseconds IS NULL THEN 0.0 ELSE latseconds / 60.0 / 60.0 END as y, dm.ChoiceName as datum, dbo.pedon.descname as describer, pp.ChoiceName as pedon_purpose, pt.ChoiceName as pedon_type, pedlabsampnum, psctopdepth, pscbotdepth, elev as elev_field, slope as slope_field, aspect as aspect_field, plantassocnm, bedrckdepth, br.ChoiceLabel as bedrock_kind, bh.ChoiceLabel as bedrock_hardness, hs.ChoiceLabel as hillslope_pos
 FROM
@@ -37,7 +39,7 @@ ORDER BY dbo.site.usiteid ;"
 	if(length(unique(na.omit(d$datum))) > 1)
 		message('NOTICE: multiple datums present')
 	
-	# are there any dupelicate pedon IDs?
+	# are there any duplicate pedon IDs?
 	t.pedon_id <- table(d$pedon_id)
 	if(any(t.pedon_id > 1)) {
 		message('NOTICE: duplicate pedons:')
