@@ -7,6 +7,10 @@
 
 3. soil texture plotting / subsetting / flagging helper function or guidance
 
-4. finish NASIS component queries
+4. finish NASIS component queries and return similar objects as pedon queries
 
 5. best-guess record from taxhistory table-- see fetchPedonPC() for current implementation
+
+6. what do we do with multiple entries / site in the Site Bedrock table?
+
+7. check sync between NASIS / PedonPC functions
